--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "angular": ">=1.2.*",
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
-    "jquery": "~1.11.0",
+    "jquery": "~2.1.1",
     "bootstrap-sass-official": "~3.1.1",
     "angular-resource": ">=1.2.*",
     "angular-cookies": ">=1.2.*",
@@ -17,5 +17,8 @@
     "angular-mocks": ">=1.2.*",
     "angular-scenario": ">=1.2.*"
   },
-  "testPath": "test/client/spec"
+  "testPath": "test/client/spec",
+  "resolutions": {
+    "jquery": "~1.11.0"
+  }
 }
