fix media queries

--- a/bower.json
+++ b/bower.json
@@ -17,8 +17,5 @@
     "angular-mocks": ">=1.2.*",
     "angular-scenario": ">=1.2.*"
   },
-  "testPath": "test/client/spec",
-  "resolutions": {
-    "jquery": "~1.11.0"
-  }
+  "testPath": "test/client/spec"
 }
